--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.86.3",
-    "@react-three/fiber": "^8.14.4",
-    "@types/three": "^0.156.0",
-    "next": "13.5.4",
+    "@nextui-org/react": "^2.2.5",
+    "framer-motion": "^10.16.4",
+    "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18",
-    "three": "^0.157.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
