--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node --transpile-only --compiler-options {\"module\":\"CommonJS\",\"moduleResolution\":\"node\"} prisma/seed/index.ts"
+  },
   "dependencies": {
     "@nextui-org/react": "^2.2.5",
     "@prisma/client": "^5.5.2",
@@ -29,6 +32,7 @@
     "prettier-plugin-tailwindcss": "^0.5.6",
     "prisma": "^5.5.2",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
