--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.2.5",
     "@prisma/client": "^5.5.2",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
