--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-parallax-tilt": "^1.7.173"
+    "react-parallax-tilt": "^1.7.173",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
