--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
+    "next-usequerystate": "^1.13.0",
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
