add detection methods

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-POSTGRES_DATABASE="exampledb"
-POSTGRES_HOST="examplehost"
-POSTGRES_HOST_NON_POOLING="examplehostnonpooling"
-POSTGRES_PASSWORD="examplepassword"
-POSTGRES_USER="exampleuser"
+DB_USER=""
+DB_PASS=""
+DB_HOST=""
+DB_NAME=""
 
-POSTGRES_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}/${POSTGRES_DATABASE}"
-POSTGRES_PRISMA_URL="${POSTGRES_URL}?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NON_POOLING="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST_NON_POOLING}/${POSTGRES_DATABASE}"
+DATABASE_URL="mysql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}?sslaccept=strict"
